velero-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: velero
  name: velero-svc
  labels:
    component: velero
    deploy: velero
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8085
  selector:
    component: velero
    deploy: velero
---
