nginx-pvc.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: mousavi
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: nginx-data
      labels:
        app: nginx
    spec:
      securityContext: {}
      serviceAccount: runasanyuid
      serviceAccountName: runasanyuid
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: nginx-data
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
               ephemeral-storage: "0.5Gi"
               cpu: '0.5'
               memory: '1G'
            limits:
               cpu: '2'
               memory: '2G'
               ephemeral-storage: "1Gi"
      volumes:
      - name: nginx-data
        persistentVolumeClaim:
          claimName: nginx-data
---
kind: Service
apiVersion: v1
metadata:
  namespace: mousavi
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
  namespace: mousavi
  labels:
    app: nginx
spec:
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 80
