route-pvc-watcher.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: velero-pvc-watcher-route
  namespace: velero
  labels:
    app.kubernetes.io/name: velero-pvc-watcher 
spec:
  host: velero-pvc-watcher.my-openshift.com
  to:
    kind: Service
    name: velero-pvc-watcher
  port:
    targetPort: http
---
